# hypermail

./: .gitignore  Cargo.toml  README.md  build-wasm32.ps1  build.ps1  build.rs
model/: frame.capnp  packet.capnp  session.capnp  stream.capnp  value.capnp
models/: health.fbs  packet.fbs  session.fbs  stream.fbs  value.fbs
src/: io.rs  lib.rs
src/core/: README.md  capnp.rs  handler.rs  io.rs  link.rs  mod.rs  packet.rs  strategy.rs
src/ffi/: mod.rs
src/protocol/: mod.rs  packet.rs
src/server/: session.rs
src/test/: mod.rs
src/test/client/: io.rs
