[package]
name = "hypermail"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[profile.release]
strip = true
opt-level = "z"
lto = true
# panic = "abort"

[features]
# default = []
default = ["libuv"]
libuv = ["cbind"]
cbind = ["libc", "diplomat", "diplomat-runtime"]

[dependencies]
capnp = "0.21.2"
tokio = { version = "1.46.1", features = ["rt"] }
tokio_with_wasm = "0.8.7"
forever-safer = { git = "https://github.com/blankfunc/forever-safer.git", features = ["atomic-poll"] }
ibig = "0.3.6"
thiserror = "2.0.12"
once_cell = "1.21.3"
async-trait = "0.1.88"
tokio-stream = "0.1.17"
flume = "0.11.1"
derive_builder = "0.20.2"
# Bindgen
uniffi = "0.29.3"
wasm-bindgen = { version = "0.2.100", features = ["gg-alloc", "serde-serialize"] }

# Native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread", "sync", "time"] }
# C/C++ bridge
libc = { version = "0.2.174", optional = true }
diplomat = { version = "0.12.0", optional = true }
diplomat-runtime = { version = "0.12.0", optional = true }

# Web
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.3", features = ["wasm_js"] }
tokio_with_wasm = { version = "0.8.7", features = ["full"] }
uniffi = { version = "0.29.3", features = ["wasm-unstable-single-threaded"] }

[build-dependencies]
bindgen = "0.72.0"
capnpc = "0.21.1"
cmake = "0.1.54"
uniffi = { version = "0.29.3", features = ["build"] }
