[package]
name = "hypermail"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[profile.release]
strip = true
opt-level = "z"
lto = true
# panic = "abort"

[dependencies]
capnp = "0.21.2"
tokio = { version = "1.46.1", features = ["rt"] }
tokio_with_wasm = "0.8.7"
forever-safer = { git = "https://github.com/blankfunc/forever-safer.git", features = ["atomic-poll"] }
ibig = "0.3.6"
thiserror = "2.0.12"
once_cell = "1.21.3"
async-trait = "0.1.88"
tokio-stream = "0.1.17"
flume = "0.11.1"
derive_builder = "0.20.2"
# Bindgen
uniffi = "0.29.3"
wasm-bindgen = { version = "0.2.100", features = ["gg-alloc", "serde-serialize"] }
futures = "0.3.31"
dashmap = "6.1.0"
bytes = "1.10.1"
crossbeam = "0.8.4"
log = "0.4.27"
env_logger = "0.11.8"

# Native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread", "sync", "time"] }

# Web
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.3", features = ["wasm_js"] }
tokio_with_wasm = { version = "0.8.7", features = ["full"] }
uniffi = { version = "0.29.3", features = ["wasm-unstable-single-threaded"] }

[build-dependencies]
capnpc = "0.21.1"
uniffi = { version = "0.29.3", features = ["build"] }
